--- a/public/plugins/AM_/panel/panel.css
+++ b/public/plugins/AM_/panel/panel.css
@@ -58,6 +58,9 @@ panel-content md-toolbar {
   min-height: 48px;
   height: 48px;
   outline: none;
+  -webkit-box-shadow: 0 8px 10px 1px rgba(0,0,0,0.15);
+  -moz-box-shadow: 0 8px 10px 1px rgba(0,0,0,0.15);
+  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.15);
 }
 panel-content md-toolbar span {
   font-size: 18px;
