--- a/public/plugins/AM_/clip/clip.css
+++ b/public/plugins/AM_/clip/clip.css
@@ -19,6 +19,9 @@ clip md-radio-button {
   margin-top: 20px;
 }
 .clipSlider md-slider {
-  width: 100px;
-  padding-right: 25px;
+  width: 200px;
+  padding-right: 20px;
+}
+.clipSlider input {
+  width: 50px;
 }
