--- a/plugins/AM_/bottomButtons/bottomButtons.jade
+++ b/plugins/AM_/bottomButtons/bottomButtons.jade
@@ -8,7 +8,7 @@ div(layout="row", layout-align="center center")
 			md-tooltip(md-direction="top") {{button.label}}
 			md-icon(md-font-icon="{{button.icon}}", class="fa")
 	div
-		md-button.md-fab.md-primary(ng-click="bb.toggleFullScreen()", aria-label="Show buttons")
+		md-button.md-fab.md-primary(ng-click="bb.toggleElements()", aria-label="Show buttons")
 			md-icon#showButtonIcon(md-font-icon="fa-navicon", class="fa")
 	div(ng-if="bb.showButtons")
 		md-button.md-fab.md-mini.actionButton(
