--- a/public/plugins/AM_/issues/issues.css
+++ b/public/plugins/AM_/issues/issues.css
@@ -1,20 +1,27 @@
 /** Issues ************************************************************************************************************/
 
 issues .maxHeight {
-  height: 300px;
+  height: 700px;
 }
 issues .minHeight {
   height: 50px;
 }
 
-issues .issueAdd {
+issues #issuesAddContainer {
+  position: relative;
   margin: 10px;
 }
-issues .issueAdd .md-button {
-  margin: 0 2px 10px 2px;
+
+issues textarea {
+  min-height: 70px !important;
 }
-issues .issueAdd textarea {
-  min-height: 70px;
+
+issues md-list {
+  padding: 0;
+}
+
+issues p {
+  color: rgba(0,0,0,0.35) !important;
 }
 
 /** Issue *************************************************************************************************************/
@@ -32,28 +39,33 @@ issue md-list-item .md-button .md-ripple-container {
 }
 
 issue md-list-item.md-2-line {
-  margin-bottom: 20px;
   min-height: 0;
 }
 
 #issueTitle button {
   min-height: 0;
-}
-
-#issueTitleIcon {
-  display: block;
-  width: 35px;
-  height: 100%;
-}
-#issueTitleIcon span {
-  font-size: 30px;
-  color: rgba(0,0,0,0.54);
-  position: absolute;
-  top: 0;
+  height: 60px;
 }
 
 issue h3,
 issue h4 {
   word-wrap: break-word;
   white-space: normal !important;
+}
+
+.issueCommentsContainer {
+  padding: 10px 5px  10px 10px;
+}
+.issueCommentsContainer md-list-item {
+  padding: 10px;
+}
+
+issue .issueInfo {
+  position: relative;
+}
+
+issue .issueInfo .issueTimeStamp {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
