--- a/plugins/AM_/issues/issue.jade
+++ b/plugins/AM_/issues/issue.jade
@@ -1,23 +1,33 @@
-md-list-item.md-2-line#issueTitle(ng-click="is.toggleComments()")
-	div.md-list-item-text
-		h3 &#35;{{is.data.number}} {{is.data.name}}
-		.issueInfo
-			p {{is.data.owner}}
-			p(class="issueTimeStamp") {{is.data.timeStamp}}
+.issue(ng-class="vm.backgroundClass")
+	md-list-item.md-2-line#issueTitle(ng-click="vm.toggleComments()")
+		div.md-list-item-text
+			h3 &#35;{{vm.data.number}} {{vm.data.name}}
+			.issueInfo
+				p {{vm.data.owner}}
+				p(class="issueTimeStamp") {{vm.data.timeStamp}}
 
-div(ng-show="is.showComments", ng-class="{issueComments: is.toggleCommentsState}", comments-height, num-new-comments="is.numNewComments")
-	.issueCommentsContainer
-		md-list
-			md-list-item.md-2-line(ng-repeat="comment in is.data.comments")
-				div.md-list-item-text
-					h3 {{comment.comment}}
-					.issueInfo
-						p {{comment.owner}}
-						p(class="issueTimeStamp") {{comment.timeStamp}}
-					//p {{comment.owner}} ({{comment.timeStamp}})
-			md-input-container(md-no-float="")
-				textarea(placeholder="New comment", ng-model="is.comment")
+	div(ng-show="vm.showComments", ng-class="{issueComments: vm.toggleCommentsState}", comments-height, num-new-comments="vm.numNewComments")
+		.issueCommentsContainer
+			md-list
+				md-list-item.md-2-line(ng-repeat="comment in vm.data.comments")
+					div.md-list-item-text
+						div(layout="row", layout-wrap)
+							h3(flex="80") {{comment.comment}}
+							md-button.md-icon-button.commentDeleteButton(
+								aria-label="Delete comment"
+								flex="15"
+								ng-if="comment.canDelete"
+								ng-click="vm.deleteComment($index)"
+							)
+								md-icon(class="fa fa-times-circle")
+						.issueInfo
+							p {{comment.owner}}
+							p(class="issueTimeStamp") {{comment.timeStamp}}
+				md-input-container(md-no-float="", ng-if="vm.issueIsOpen")
+					textarea(placeholder="New comment", ng-model="vm.comment")
 
-		md-button.md-raised.md-accent(ng-click="is.saveComment()", ng-disabled="is.saveCommentDisabled") Save
+			div(layout="row", layout-align="space-between center")
+				md-button.md-raised.md-accent(ng-click="vm.saveComment()", ng-disabled="vm.saveCommentDisabled", ng-if="vm.issueIsOpen") Save
+				md-button.md-raised.md-primary.md-hue-1(ng-click="vm.closeIssue()", ng-if="vm.issueIsOpen") Close issue
 
-md-divider
+	md-divider
