--- a/plugins/AM_/panel/panelContent.jade
+++ b/plugins/AM_/panel/panelContent.jade
@@ -16,14 +16,14 @@ div(id="vm.contentItem", layout="column", class="md-whiteframe-1dp", ng-show="vm
 							div(layout="row")
 								md-icon(md-font-icon="fa-check", class="fa", ng-if="option.selected")
 								p(flex="") {{option.label}}
-								md-icon(md-font-icon="fa-sort-amount-desc", class="fa", ng-if="option.firstSelected")
-								md-icon(md-font-icon="fa-sort-amount-asc", class="fa", ng-if="option.secondSelected")
+								md-icon(md-font-icon="{{option.firstSelectedIcon}}", class="fa", ng-if="option.firstSelected")
+								md-icon(md-font-icon="{{option.secondSelectedIcon}}", class="fa", ng-if="option.secondSelected")
 
 	.panelContentFilter(ng-if="vm.hasFilter", layout="row")
 		div(flex="85")
 			md-input-container(md-no-float="")
 				input(type="text", ng-model="vm.filterInputText", placeholder="Filter")
-		div(flex="15")
+		div(flex="15", ng-if="vm.showClearFilterButton")
 			md-button.md-icon-button(ng-click="vm.clearFilter()", aria-label="Clear filter")
 				md-icon(md-font-icon="fa-times-circle", class="fa")
 
