--- a/plugins/clip/clip.jade
+++ b/plugins/clip/clip.jade
@@ -1,15 +1,27 @@
-.metaview(ng-controller='ClipCtrl')
-	#clipplane
-		.input-group
-			span Axis
-			button.btn(ng-click="changeAxis('X')")
-				span X
-			button.btn(ng-click="changeAxis('Y')")
-				span Y
-			button.btn(ng-click="changeAxis('Z')")
-				span Z
-		#clipslider.input-group
-			span Slider Position
-			slider(ng-model="slider",min=1,max="sliderMaxValue",step=1)
+div(ng-class="cl.height")
+	div(layout="column", layout-align="start center")
+		div
+			| Axis:
+			md-radio-group(ng-model="cl.selectedAxis")
+				md-radio-button(ng-repeat="axis in cl.axes", value="{{axis}}") {{axis}}
 
-
+		.clipSlider
+			div(layout="row", layout-align="start center")
+				md-slider(
+					flex
+					ng-model="cl.sliderPosition"
+					step="{{cl.sliderStep}}"
+					min="{{cl.sliderMin}}"
+					max="{{cl.sliderMax}}"
+					aria-label="Position"
+				)
+				div
+					input(
+						flex
+						type="number"
+						ng-model="cl.sliderPosition"
+						step="{{cl.sliderStep}}"
+						min="{{cl.sliderMin}}"
+						max="{{cl.sliderMax}}"
+					)
+					| &nbsp;%
