--- a/public/plugins/issues/issues.css
+++ b/public/plugins/issues/issues.css
@@ -56,13 +56,37 @@ issue md-list-item .md-button .md-ripple-container {
   border-radius: 0;
 }
 
-issue md-list-item.md-2-line {
+issue .issueHeader {
+  position: relative;
+  height: 60px;
+}
+issue .issueHeader .issueTitle {
   min-height: 0;
+  height: 100%;
+}
+issue .issueHeader .issueTitle .issueTitleInfo {
+  position: relative;
+}
+issue .issueHeader .issueTitle button {
+  min-height: 0;
+  height: 100%;
+}
+issue .issueHeader .issueTitle {
+  min-height: 0;
+  height: 100%;
 }
 
-#issueTitle button {
-  min-height: 0;
-  height: 60px;
+issue .issueHeader .issueInfo {
+  position: absolute;
+  top: 0;
+  background: #E8F5E9;
+  padding: 0 5px 0 10px;
+  width: 100%;
+  height: 100%;
+}
+issue .issueHeader .issueInfo h5 {
+  color: rgba(0, 0, 0, 0.7);
+  margin-left: 5px;
 }
 
 issue h3,
@@ -71,22 +95,25 @@ issue h4 {
   white-space: normal !important;
 }
 
-.issueCommentsContainer {
+issue .issueCommentsContainer {
   padding: 10px 5px  10px 10px;
 }
-.issueCommentsContainer md-list-item {
+issue .issueCommentsContainer md-list-item {
   padding: 10px;
 }
-.issueCommentsContainer md-list-item .commentDeleteButton {
-  margin-top: -15px;
-}
+issue .issueCommentsContainer .commentModify {
 
-issue .issueInfo {
+}
+issue .issueCommentsContainer md-list-item .commentModifyButton {
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  margin: 0 0 0 20px;
+  outline: none;
+}
+issue .issueCommentsContainer .issueCommentInfo {
   position: relative;
 }
-
-issue .issueInfo .issueTimeStamp {
-  position: absolute;
-  top: 0;
-  right: 0;
+issue .issueCommentsContainer .issueCommentsFooter {
+  margin-top: -10px;
 }
