--- a/plugins/bottomButtons/bottomButtons.jade
+++ b/plugins/bottomButtons/bottomButtons.jade
@@ -1,20 +1,19 @@
-div(layout="row", layout-align="center center")
-	div(ng-if="bb.showButtons")
-		md-button.md-fab.md-mini.actionButton(
-			ng-repeat="button in bb.leftButtons track by $index"
-			ng-click="button.click()"
-			aria-label="{{button.label}}"
-		)
-			md-tooltip(md-direction="top") {{button.label}}
-			md-icon(md-font-icon="{{button.icon}}", class="fa")
-	div
-		md-button.md-fab.md-primary(ng-click="bb.toggleElements()", aria-label="Show buttons")
-			md-icon#showButtonIcon(md-font-icon="fa-navicon", class="fa")
-	div(ng-if="bb.showButtons")
-		md-button.md-fab.md-mini.actionButton(
-			ng-repeat="button in bb.rightButtons track by $index"
-			ng-click="button.click()"
-			aria-label="{{button.label}}"
-		)
-			md-tooltip(md-direction="top") {{button.label}}
-			md-icon(md-font-icon="{{button.icon}}", class="fa")
+#leftButtons(ng-if="bb.showButtons")
+	md-button.md-fab.md-mini.actionButton(
+		ng-repeat="button in bb.leftButtons track by $index"
+		ng-click="button.click()"
+		aria-label="{{button.label}}"
+	)
+		md-tooltip(md-direction="top") {{button.label}}
+		md-icon(md-font-icon="{{button.icon}}", class="fa")
+div
+	md-button.md-fab.md-primary(ng-click="bb.toggleElements()", aria-label="Show buttons")
+		md-icon#showButtonIcon(md-font-icon="fa-navicon", class="fa")
+#rightButtons(ng-if="bb.showButtons")
+	md-button.md-fab.md-mini.actionButton(
+		ng-repeat="button in bb.rightButtons track by $index"
+		ng-click="button.click()"
+		aria-label="{{button.label}}"
+	)
+		md-tooltip(md-direction="top") {{button.label}}
+		md-icon(md-font-icon="{{button.icon}}", class="fa")
