--- a/public/plugins/bottomButtons/bottomButtons.css
+++ b/public/plugins/bottomButtons/bottomButtons.css
@@ -2,10 +2,23 @@ bottom-buttons {
   display: block;
   position: absolute;
   bottom: 10px;
-  left: 700px;
-  right: 700px;
+  left: 0;
+  right: 0;
+  width: 400px;
   margin: auto;
   text-align: center;
+}
+
+bottom-buttons #leftButtons {
+  position: absolute;
+  left: 0;
+  top: 5px;
+}
+
+bottom-buttons #rightButtons {
+  position: absolute;
+  right: 0;
+  top: 5px;
 }
 
 bottom-buttons #showButtonIcon {
