ISSUE #88 - Tree toggle and expansion working, panel show/hide improved

--- a/plugins/panel/panelContent.jade
+++ b/plugins/panel/panelContent.jade
@@ -1,4 +1,4 @@
-div(id="vm.contentItem", layout="column", class="md-whiteframe-1dp", ng-show="vm.contentData.show", style="height:{{vm.contentHeight}}px")
+div(id="vm.contentItem", layout="column", class="md-whiteframe-1dp", style="height:{{vm.contentHeight}}px")
 
 	md-toolbar(class="md-primary", ng-click="vm.click()")
 		div(class="md-toolbar-tools")
