--- a/plugins/tree/tree.jade
+++ b/plugins/tree/tree.jade
@@ -1,15 +1,15 @@
 // Tree
-div(ng-cloak="", class="virtualRepeatdemoInfiniteScroll", ng-show="true")
-	md-virtual-repeat-container(md-top-index="vm.topIndex", id="vertical-container")
-		div(md-virtual-repeat="item in vm.infiniteItems", md-on-demand="", class="repeated-item", flex="")
+div(ng-cloak="", class="virtualRepeatdemoInfiniteScroll", ng-show="vm.showTree")
+	md-virtual-repeat-container.vertical-container(md-top-index="vm.topIndex")
+		div(md-virtual-repeat="item in vm.infiniteItemsTree", md-on-demand="", class="repeated-item", flex="")
 			div(style="margin-left:{{item.level * 20}}px", ng-if="item", layout="row", layout-align="start center")
-				md-button.md-icon-button(aria-label="Collapse", ng-click="toggleChildren(item._id)", ng-disabled="!item.hasChildren")
-					md-icon.md-accent(md-font-icon="fa-chevron-circle-right", class="fa", ng-if="!tn.expanded")
-					md-icon(md-font-icon="fa-chevron-circle-down", class="fa", ng-if="tn.expanded")
-				md-checkbox(
-					ng-model="item.toggled"
-					ng-change="tn.nodeToggled(tn.node._id)"
-					aria-label="Toggle")
+				.treeToggleButton(ng-click="vm.expand(item._id)")
+					md-icon.md-accent(md-font-icon="fa-chevron-circle-right", class="fa", ng-if="!item.expanded", ng-class="{treeToggleButtonDisabled: !item.hasChildren}")
+					md-icon(md-font-icon="fa-chevron-circle-down", class="fa", ng-if="item.expanded")
+				.treeToggleButton(ng-click="vm.toggleTreeNode(item)")
+					md-icon.md-accent(md-font-icon="fa-square", class="fa", ng-if="item.toggleState==='visible'")
+					md-icon.md-accent(md-font-icon="fa-square-o", class="fa", ng-if="item.toggleState==='invisible'")
+					md-icon(md-font-icon="fa-minus-square", class="fa", ng-if="item.toggleState==='parentOfInvisible'")
 				p(ng-click="vm.nodeSelected(item._id)", ng-class="{viewerSelected: item.selected}") {{item.name}}
 
 
@@ -25,11 +25,11 @@ div(ng-cloak="", class="virtualRepeatdemoInfiniteScroll", ng-show="true")
 	)
 
 // Filter list
-//div(ng-cloak="", class="virtualRepeatdemoInfiniteScroll", ng-if="vm.showFilterList")
+div(ng-cloak="", class="virtualRepeatdemoInfiniteScroll", ng-if="vm.showFilterList")
 	md-content(layout="column")
-		md-virtual-repeat-container(id="vertical-container")
+		md-virtual-repeat-container.vertical-container
 			div(
-				md-virtual-repeat="item in vm.infiniteItems"
+				md-virtual-repeat="item in vm.infiniteItemsFilter"
 				md-on-demand=""
 				class="repeated-item"
 				flex=""
@@ -37,10 +37,8 @@ div(ng-cloak="", class="virtualRepeatdemoInfiniteScroll", ng-show="true")
 				layout="row"
 				layout-align="start center"
 			)
-				md-checkbox(
-					ng-show="item!==null"
-					ng-model="item.toggleState"
-					ng-change="vm.filterItemToggled(item)"
-					aria-label="Toggle"
-				)
+				.treeToggleButton(ng-click="vm.toggleFilterNode(item)")
+					md-icon.md-accent(md-font-icon="fa-square", class="fa", ng-if="item.toggleState==='visible'")
+					md-icon.md-accent(md-font-icon="fa-square-o", class="fa", ng-if="item.toggleState==='invisible'")
+
 				p#treeFilterItemName(ng-click="vm.filterItemSelected(item)") {{item.name}}
