--- a/public/plugins/panel/panel.css
+++ b/public/plugins/panel/panel.css
@@ -25,6 +25,7 @@ panel #buttons .panelButtonGroup button {
 }
 panel #buttons .panelButtonGroup label {
   color: rgb(63, 81, 181);
+  text-shadow: 0 0 1px #FFFFFF;
 }
 
 /** Panels ************************************************************************************************************/
