--- a/plugins/panel/panel.jade
+++ b/plugins/panel/panel.jade
@@ -1,3 +1,10 @@
 div(ng-show="pl.showPanel")
-	div(id="items")
-	div(id="buttons")
+	div#items
+		div(ng-repeat="contentItem in pl.contentItems")
+			panel-content(position="pl.position", content-data='contentItem', ng-show='contentItem.show')
+			div(ng-if="!contentItem.last", style="display:block; height:20px;")
+	div#buttons
+		.panelButtonGroup(ng-repeat="contentItem in pl.contentItems")
+			md-button.md-fab.md-primary.md-mini(ng-click="pl.buttonClick(contentItem.type)", aria-label="{{contentItem.title}}")
+				md-icon(class="fa", md-font-icon="{{contentItem.icon}}")
+		label {{contentItem.title}}
